# standalone_contact_detection

./: .gitignore  .gitmodules  CLAUDE.md  DESIGN.md  README.md  THEORY.md  THEORY_LONG.md  contact_detection_standalone.py  detect.py  detect_scene.py  main.py  pyproject.toml  test_main.py  verify_demos.py  verify_markovlib.py  verify_standalone.py  viz.py
contact/: __init__.py  _mjcf.py  capabilities.py  config.py  consistency.py  demos_impacts.py  demos_motion.py  demos_scenes_chain.py  demos_scenes_stack.py  detector.py  dynamics.py  dynamics_id.py  emissions.py  events.py  geometry.py  geometry_resolvers.py  graph.py  hmm.py  hsmm.py  impacts.py  inverse_dynamics.py  mesh_collision.py  mode_discovery.py  model.py  mujoco_gen.py  report.py  signals.py  structure_inference.py  transitions.py  types.py  uncertainty.py  verification.py  visualize.py
docs/: design-history.md  theory-long.md
oracle/: __init__.py  _mjcf.py  factory.py  registry.py  report.py  scenarios_core.py  scenarios_impacts.py  scenarios_motion.py  scenes_chains.py  scenes_graph.py  scenes_stacks.py  specs.py  synthetic.py  verification.py  visualize.py
rung0/: README.md
tests/: test_capabilities.py  test_density.py  test_dynamics_id.py  test_dynamics_id_mujoco.py  test_expectations.py  test_force_channel.py  test_geometry_resolvers.py  test_graph.py  test_impacts_dynamics.py  test_import_law.py  test_integration.py  test_invariants.py  test_inverse_dynamics.py  test_inverse_dynamics_mujoco.py  test_mesh_collision.py  test_mode_discovery.py  test_readme_table.py  test_regression_batch3.py  test_regression_frontier.py  test_regression_full.py  test_scene_integration.py  test_structure_uncertainty.py  test_synthetic.py  test_temporal.py  test_units.py
