[project]
name = "standalone-contact-detection"
version = "0.1.0"
description = "A probabilistic, support-relative contact-state estimator for motion-capture trajectories, validated against MuJoCo physics."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "clarabel>=0.11.1",
    "coal>=3.0.3",
    "cvxpy>=1.9.2",
    "marmo",
    "matplotlib>=3.11.0",
    "mujoco>=3.2.0",
    "numpy>=2.5.0",
    "scipy>=1.18.0",
]

[dependency-groups]
dev = [
    "pytest>=8.0.0",
]

# Install the project itself (editable) so `import contact` works from anywhere — tests,
# scripts, a REPL — with no sys.path tricks.
[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["contact"]

# The vendored general Markov-process library (markovlib/) — published on PyPI as `marmo`, imported
# as `markovlib`; the contact engines delegate to it. Consumed as an editable path dependency.
[tool.uv.sources]
marmo = { path = "markovlib", editable = true }

# Scope collection to this repo's own suites; the vendored markovlib/ submodule carries its own
# suite and env (run it explicitly with `uv run pytest markovlib/tests` when bumping the pin).
[tool.pytest.ini_options]
testpaths = ["tests", "test_main.py"]
